--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vet ICU/ER Calculator</title>
+<title>Vet ICU / ER Calculator</title>
 <style>
 body {font-family:-apple-system,BlinkMacSystemFont,sans-serif;background:#0f172a;color:#e5e7eb;margin:0;padding:16px;}
 h1,h2 {text-align:center;}
@@ -27,15 +27,15 @@ button {background:#2563eb;color:white;}
 <h1>🐾 Vet ICU / ER Calculator</h1>
 
 <div class="nav">
-  <button onclick="showTab('pain')">Pain & Anesthesia</button>
-  <button onclick="showTab('fluids')">Fluids</button>
-  <button onclick="showTab('nutrition')">Nutrition</button>
-  <button onclick="showTab('gi')">GI Drugs</button>
+<button onclick="showTab('pain')">Pain & Anesthesia</button>
+<button onclick="showTab('fluids')">Fluids</button>
+<button onclick="showTab('nutrition')">Nutrition</button>
+<button onclick="showTab('gi')">GI Drugs</button>
 </div>
 
 <!-- ================= PAIN & ANESTHESIA ================= -->
-<!-- ================= PAIN & ANESTHESIA ================= -->
 <div class="tab active" id="pain">
+
 <div class="card">
 <label>Species</label>
 <div class="toggle">
@@ -46,7 +46,7 @@ button {background:#2563eb;color:white;}
 <input type="number" id="wt" step="0.1" oninput="calcPain()">
 </div>
 
-<!-- ===== SEDATIVES / PREMEDS ===== -->
+<!-- ===== SEDATIVES ===== -->
 <div class="card"><h2>🟦 Sedatives / Premedication</h2></div>
 
 <div class="card">
@@ -67,7 +67,7 @@ button {background:#2563eb;color:white;}
 <div id="buto" class="result"></div>
 </div>
 
-<!-- ===== INJECTABLE ANESTHETICS ===== -->
+<!-- ===== ANESTHETICS ===== -->
 <div class="card"><h2>🟨 Injectable Anesthetics</h2></div>
 
 <div class="card">
@@ -90,7 +90,7 @@ button {background:#2563eb;color:white;}
 
 <div class="card">
 <h2>Ketamine – CRI</h2>
-<div class="small">0.1–0.6 mg/kg/hr</div>
+<div class="small">0.1–0.6 mg/kg/hr (100 mg/mL)</div>
 <div id="ketCRI" class="result"></div>
 </div>
 
@@ -99,7 +99,7 @@ button {background:#2563eb;color:white;}
 
 <div class="card">
 <h2>Buprenorphine</h2>
-<div class="small">0.01–0.02 mg/kg (0.5 mg/mL)</div>
+<div class="small">0.01–0.02 mg/kg (0.3 mg/mL)</div>
 <div id="bup" class="result"></div>
 </div>
 
@@ -185,47 +185,42 @@ button {background:#2563eb;color:white;}
 <!-- ================= GI DRUGS ================= -->
 <div class="tab" id="gi">
 <div class="card">
-<label>Species</label>
-<div class="toggle">
-<button onclick="setSpecies('dog')">Dog</button>
-<button onclick="setSpecies('cat')">Cat</button>
-</div>
 <label>Weight (kg)</label>
 <input type="number" id="wt_gi" step="0.1" oninput="calcGI()">
 </div>
 
-<div class="card"><h2>Maropitant</h2><div class="small">1 mg/kg q24h (10 mg/mL)</div><div id="maro" class="result"></div></div>
-<div class="card"><h2>Ondansetron</h2><div class="small">0.1–0.2 mg/kg q8–12h (2 mg/mL)</div><div id="onda" class="result"></div></div>
+<div class="card"><h2>Maropitant</h2><div class="small">1 mg/kg (10 mg/mL)</div><div id="maro" class="result"></div></div>
+<div class="card"><h2>Ondansetron</h2><div class="small">0.1–0.2 mg/kg (2 mg/mL)</div><div id="onda" class="result"></div></div>
 <div class="card"><h2>Metoclopramide</h2><div class="small">0.2–0.4 mg/kg (5 mg/mL)</div><div id="meto" class="result"></div></div>
 <div class="card"><h2>Famotidine</h2><div class="small">0.5–1 mg/kg (10 mg/mL)</div><div id="famo" class="result"></div></div>
 <div class="card"><h2>Pantoprazole</h2><div class="small">1 mg/kg IV (40 mg vial)</div><div id="panto" class="result"></div></div>
-<div class="card"><h2>Sucralfate (PO)</h2><div class="small">0.5–1 g/dog | 0.25 g/cat</div><div id="sucr" class="result"></div></div>
+<div class="card"><h2>Sucralfate (PO)</h2><div class="small">Dog 0.5–1 g | Cat 0.25 g</div><div id="sucr" class="result"></div></div>
 </div>
 
 <script>
 function showTab(t){document.querySelectorAll('.tab').forEach(x=>x.classList.remove('active'));document.getElementById(t).classList.add('active');}
 let species='dog';
-function setSpecies(s){species=s;calcPain();calcGI();}
+function setSpecies(s){species=s;calcPain();}
 
-function dose(w,d){return (w*d).toFixed(2);}
-function vol(mg,conc){return (mg/conc).toFixed(2);}
+const v=(mg,conc)=>`${mg.toFixed(2)} mg | ${(mg/conc).toFixed(2)} mL`;
+const r=(l,h,c)=>`${v(l,c)} – ${v(h,c)}`;
 
 function calcPain(){
 const w=parseFloat(document.getElementById('wt').value); if(!w) return;
-document.getElementById('bup').innerHTML=`${dose(w,0.01)}–${dose(w,0.02)} mg | ${vol(w*0.01,0.5)}–${vol(w*0.02,0.5)} mL`;
-document.getElementById('meth').innerHTML=`${dose(w,species==='dog'?0.2:0.1)}–${dose(w,species==='dog'?0.5:0.3)} mg`;
-document.getElementById('hydro').innerHTML=`${dose(w,species==='dog'?0.05:0.025)}–${dose(w,species==='dog'?0.1:0.05)} mg`;
-document.getElementById('gaba').innerHTML=`${dose(w,10)}–${dose(w,20)} mg PO`;
-document.getElementById('prop').innerHTML=`${dose(w,species==='dog'?2:4)}–${dose(w,species==='dog'?6:8)} mg`;
-document.getElementById('ketBolus').innerHTML=`${dose(w,1)}–${dose(w,5)} mg`;
-document.getElementById('ketCRI').innerHTML=`${dose(w,0.1)}–${dose(w,0.6)} mg/hr`;
-document.getElementById('alf').innerHTML=`${dose(w,species==='dog'?1:2)}–${dose(w,species==='dog'?3:5)} mg`;
-document.getElementById('dex').innerHTML=`${dose(w,species==='dog'?0.001:0.005)}–${dose(w,species==='dog'?0.005:0.01)} mg`;
-document.getElementById('midz').innerHTML=`${dose(w,0.1)}–${dose(w,0.3)} mg`;
-document.getElementById('buto').innerHTML=`${dose(w,0.2)}–${dose(w,0.4)} mg`;
-document.getElementById('car').innerHTML=species==='dog'?`${dose(w,4)} mg/day`:'❌ Cats';
-document.getElementById('mel').innerHTML=`${dose(w,species==='dog'?0.2:0.1)} mg`;
-document.getElementById('robe').innerHTML=species==='dog'?`${dose(w,1)} mg`:'❌ Cats';
+document.getElementById('dex').innerHTML=r(w*(species==='dog'?0.001:0.005),w*(species==='dog'?0.005:0.01),0.5);
+document.getElementById('midz').innerHTML=r(w*0.1,w*0.3,5);
+document.getElementById('buto').innerHTML=r(w*0.2,w*0.4,10);
+document.getElementById('prop').innerHTML=r(w*(species==='dog'?2:4),w*(species==='dog'?6:8),10);
+document.getElementById('alf').innerHTML=r(w*(species==='dog'?1:2),w*(species==='dog'?3:5),10);
+document.getElementById('ketBolus').innerHTML=r(w*1,w*5,100);
+document.getElementById('ketCRI').innerHTML=r(w*0.1,w*0.6,100)+" / hr";
+document.getElementById('bup').innerHTML=r(w*0.01,w*0.02,0.3);
+document.getElementById('meth').innerHTML=r(w*(species==='dog'?0.2:0.1),w*(species==='dog'?0.5:0.3),10);
+document.getElementById('hydro').innerHTML=r(w*(species==='dog'?0.05:0.025),w*(species==='dog'?0.1:0.05),2);
+document.getElementById('gaba').innerHTML=`${(w*10).toFixed(0)}–${(w*20).toFixed(0)} mg PO`;
+document.getElementById('car').innerHTML=species==='dog'?`${(w*4).toFixed(1)} mg/day`:'❌ Cats';
+document.getElementById('mel').innerHTML=`${(w*(species==='dog'?0.2:0.1)).toFixed(2)} mg`;
+document.getElementById('robe').innerHTML=species==='dog'?`${w.toFixed(2)} mg`:'❌ Cats';
 }
 
 function calcFluids(s){
@@ -242,10 +237,9 @@ document.getElementById('fluidResults').innerHTML=
 function calcNutrition(s){
 if(s) species=s;
 const w=parseFloat(document.getElementById('wt_nut').value); if(!w) return;
-const status=document.getElementById('status').value;
+const mult={neutered:1.6,intact:1.8,hospitalized:1.2,critical:1.5,weightloss:1}[document.getElementById('status').value];
 const meals=parseFloat(document.getElementById('meals').value)||2;
 const RER=70*Math.pow(w,0.75);
-const mult={neutered:1.6,intact:1.8,hospitalized:1.2,critical:1.5,weightloss:1}[status];
 const MER=RER*mult;
 document.getElementById('nutResults').innerHTML=
 `RER: ${RER.toFixed(0)} kcal/day<br>MER: ${MER.toFixed(0)} kcal/day<br>Per meal: ${(MER/meals).toFixed(0)} kcal`;
@@ -253,11 +247,11 @@ document.getElementById('nutResults').innerHTML=
 
 function calcGI(){
 const w=parseFloat(document.getElementById('wt_gi').value); if(!w) return;
-document.getElementById('maro').innerHTML=`${dose(w,1)} mg | ${vol(w*1,10)} mL`;
-document.getElementById('onda').innerHTML=`${dose(w,0.1)}–${dose(w,0.2)} mg`;
-document.getElementById('meto').innerHTML=`${dose(w,0.2)}–${dose(w,0.4)} mg`;
-document.getElementById('famo').innerHTML=`${dose(w,0.5)}–${dose(w,1)} mg`;
-document.getElementById('panto').innerHTML=`${dose(w,1)} mg`;
+document.getElementById('maro').innerHTML=v(w*1,10);
+document.getElementById('onda').innerHTML=r(w*0.1,w*0.2,2);
+document.getElementById('meto').innerHTML=r(w*0.2,w*0.4,5);
+document.getElementById('famo').innerHTML=r(w*0.5,w*1,10);
+document.getElementById('panto').innerHTML=`${w.toFixed(2)} mg`;
 document.getElementById('sucr').innerHTML=species==='dog'?'0.5–1 g PO':'0.25 g PO';
 }
 </script>
