--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vet ICU / ER Calculator</title>
+<title>Vet GP Calculator</title>
 <style>
 body {font-family:-apple-system,BlinkMacSystemFont,sans-serif;background:#0f172a;color:#e5e7eb;margin:0;padding:16px;}
 h1,h2 {text-align:center;}
@@ -24,7 +24,7 @@ button {background:#2563eb;color:white;}
 </head>
 <body>
 
-<h1>🐾 Vet ICU / ER Calculator</h1>
+<h1>🐾 Vet Calculator JT </h1>
 
 <div class="nav">
 <button onclick="showTab('pain')">Pain & Anesthesia</button>
